--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "connect-mongodb": "^1.1.5",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "express-session": "^1.13.0",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "urlencode": "^1.1.0"
   }
 }
