--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
-    "connect-mongodb": "^1.1.5",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "connect": "~2.0.3",
+    "connect-mongodb": "~1.1.5",
     "express-session": "^1.13.0",
+    "session-mongoose": "~0.5.2 ",
+    "mongoose": "~4.4.11",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
-    "urlencode": "^1.1.0"
+    "serve-favicon": "~2.3.0"
   }
 }
