--- a/package.json
+++ b/package.json
@@ -6,18 +6,23 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.3.0",
     "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "ejs": "~2.3.3",
-    "express": "~4.13.1",
     "connect": "~2.0.3",
     "connect-mongodb": "~1.1.5",
+    "cookie-parser": "~1.3.5",
+    "debug": "2.2.0",
+    "ejs": "~2.3.3",
+    "eventproxy": "^0.3.4",
+    "express": "~4.13.1",
     "express-session": "^1.13.0",
-    "session-mongoose": "~0.5.2 ",
+    "moment": "^2.12.0",
     "mongoose": "~4.4.11",
     "morgan": "~1.6.1",
-    "debug": "2.2.0",
-    "serve-favicon": "~2.3.0"
+    "node-uuid": "^1.4.7",
+    "nodemailer": "^2.3.0",
+    "serve-favicon": "~2.3.0",
+    "session-mongoose": "~0.5.2 ",
+    "validator": "^5.2.0"
   }
 }
