--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemailer": "^2.3.0",
     "serve-favicon": "~2.3.0",
     "session-mongoose": "~0.5.2 ",
+    "utility": "^1.7.0",
     "validator": "^5.2.0"
   }
 }
