--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "~2.3.3",
     "eventproxy": "^0.3.4",
     "express": "~4.13.1",
+    "express-flash": "0.0.2",
     "express-session": "^1.13.0",
     "moment": "^2.12.0",
     "mongoose": "~4.4.11",
